# ChangeLog for dev-lang/swi-prolog
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.189 2009/08/02 00:27:52 keri Exp $

*swi-prolog-5.7.13 (02 Aug 2009)

  02 Aug 2009; <keri@gentoo.org> +swi-prolog-5.7.13.ebuild:
  Bump -5.7 development version

*swi-prolog-5.7.12 (26 Jul 2009)

  26 Jul 2009; <keri@gentoo.org> +swi-prolog-5.7.12.ebuild:
  Bump -5.7 development version

  04 Jul 2009; <keri@gentoo.org> -swi-prolog-5.7.6.ebuild,
  -swi-prolog-5.7.7.ebuild, -swi-prolog-5.7.8.ebuild,
  -swi-prolog-5.7.9.ebuild, -swi-prolog-5.7.10.ebuild:
  Remove old development versions

*swi-prolog-5.7.11 (04 Jul 2009)

  04 Jul 2009; <keri@gentoo.org> +swi-prolog-5.7.11.ebuild:
  Bump -5.7 development version

*swi-prolog-5.7.10 (13 Jun 2009)

  13 Jun 2009; <keri@gentoo.org> +swi-prolog-5.7.10.ebuild:
  Bump -5.7 development version

*swi-prolog-5.7.9 (05 Jun 2009)

  05 Jun 2009; <keri@gentoo.org> +swi-prolog-5.7.9.ebuild:
  Bump -5.7 development version

  26 May 2009; <keri@gentoo.org> swi-prolog-5.6.64.ebuild,
  swi-prolog-5.7.8.ebuild:
  Fix mkvmi compile failure with glibc-2.10. Closes #271067 reported by Serchio

  10 May 2009; <keri@gentoo.org> swi-prolog-5.6.64.ebuild,
  swi-prolog-5.7.8.ebuild:
  Fix static builds

  26 Apr 2009; <keri@gentoo.org> swi-prolog-5.6.64.ebuild,
  swi-prolog-5.7.8.ebuild:
  Fix parallel build. Closes #267292 reported by Philip White.

  25 Apr 2009; <keri@gentoo.org> swi-prolog-5.6.64.ebuild,
  swi-prolog-5.7.8.ebuild:
  Ensure jpl dynamic linking consistency. Closes #266614 reported by Jeremy Rann.

  12 Apr 2009; <keri@gentoo.org> -swi-prolog-5.6.62.ebuild,
  -swi-prolog-5.6.63.ebuild:
  Remove old versions

  11 Apr 2009; nixnut <nixnut@gentoo.org> swi-prolog-5.6.64.ebuild:
  ppc stable #264441

  07 Apr 2009; Tobias Klausmann <klausman@gentoo.org>
  swi-prolog-5.6.64.ebuild:
  Stable on alpha, bug #264441
