@@ -1,11 +1,14 @@
 DIST pl-5.7.11.tar.gz 12389360 RMD160 3038f2b60147a9902697a09a3705c275b549a2ac SHA1 39574cf2c6a9417c3de97fb5f0e991a27d11f4cb SHA256 b4fb72ef231e66ec18892174a4d60b3c46fe016068bb3c1a5ab3010ec5e44672
 DIST pl-5.7.12.tar.gz 12439841 RMD160 da9a3be45a2f8564f88607926a099a8369ed0815 SHA1 db04b9a8adc42c1f12052ef2b9d1ef535ab4b768 SHA256 354b6d1baa77eee628b56549e0a3a988f2a1db9c3b249b4e669dde35db3b1866
 DIST pl-5.7.13.tar.gz 12448226 RMD160 795fc12beedfee1a07ca2565bf198f0f5012e3d3 SHA1 e64cd7f23654df86597f90b6e4687b2edf712255 SHA256 9f54f2bde2d2bcac994ab3038201217c7bf900184ff9f6706a904fa56991eeda
+DIST pl-5.7.14.tar.gz 12459121 RMD160 527ef12b7f0cee456f69fb9484cc2675c9c1e6a8 SHA1 e1faf5eddf3b514d5eb6ddb1c74c564e35fb28cf SHA256 642c82af15021ce4a566931855822bc7594af6842b596fc23715fd17640675ff
 DIST swi-prolog-5.7.11-gentoo-patchset-0.tar.gz 4693 RMD160 cd4b1b07fcede130e9b1339f6dcb6062751b73de SHA1 417d6912e53c9181e333a1479ac4295f81117d64 SHA256 045be3e5f692c4d64756391d6d116a4a47680687152ce59f2afd8e08790faf0a
 DIST swi-prolog-5.7.12-gentoo-patchset-0.tar.gz 4642 RMD160 941a4a3fcc7ffdf4fc7eca0542bc7c4542290bab SHA1 e7af02efd25fd6748eb42633fbeb4e5845d276b9 SHA256 1e31d859237f34cc0805f40b4857c49b455fd65e4c25b4d4f0e47bee68d93b35
 DIST swi-prolog-5.7.13-gentoo-patchset-0.tar.gz 4666 RMD160 ea2ec1c88f741e2c50dbd5e70d5628b3582751a7 SHA1 10f450f744d70131e506a20d2cbb566ff3586636 SHA256 58fb632a4e9df0008c9ecd4f08546f6e86c0e39eb0b77241286a9f87042ab2df
+DIST swi-prolog-5.7.14-gentoo-patchset-0.tar.gz 4651 RMD160 38421c52aeb276948020108ac49303ad6a9f684a SHA1 1c1728924981a77ab02ddea7c8a83cc98786401b SHA256 b03242f0947cbfb75b38ad264f9b8b0c74e1fcd3b443ff64ad09b31338bc5234
 EBUILD swi-prolog-5.7.11.ebuild 3233 RMD160 cfff4e3227840982ab5fa60c1cc7d89fb24db8b1 SHA1 03edcd5892621e15b48d3a9d14faccc6d7954981 SHA256 2c795d0026b5c25eb573b6c66b9a6545fe9094a9b91d8b57c640ff9c164e159e
 EBUILD swi-prolog-5.7.12.ebuild 3233 RMD160 cc9e9f1c1023acf746dc086a1a44f0d371085f63 SHA1 f8c44ab50b22414d7f1fd9aa73346c40bc81b184 SHA256 0fbde11fdb5c09de7336160e67e7125e2056f6f2b102f51c88a06e83ad2a2076
 EBUILD swi-prolog-5.7.13.ebuild 3250 RMD160 f27267f17111ba194fc1ad12c66b17caef075be9 SHA1 0e247fd2e6d4243aa9e0a715ddc855e8bc9b0296 SHA256 28296bf2d35d2548737a920602e752a63756fea7dbcdd840b0842f428e4d8c83
-MISC ChangeLog 31333 RMD160 789756970885d3824edb8eb4688f0a1a689c821b SHA1 09f47120a962fd8d77a7134c64647a34c9fd8a4d SHA256 945c74657b9c4de63efda204b9bca0bbb6d29e5fb9ad3356a309ad04b1a99eb6
+EBUILD swi-prolog-5.7.14.ebuild 3250 RMD160 98f9fc9ec994f67b074f940453c5ac5ad2204294 SHA1 7f77337d5bf75785193aa35dc0a8a3deab7a766b SHA256 2c07d036e6d0005bfaf9f88ae9a59432759deb085032b66e3f50db42c3fb2c09
+MISC ChangeLog 31460 RMD160 fa96e258d972a29f2cbdab4ccd23e94dbcb8952d SHA1 875e29610042297e0cb91d2f2c6ea44a6cceb443 SHA256 869d87ab1a9d4dd22791070faba35995089270f4cab67cb15917b19440c04f37
 MISC metadata.xml 159 RMD160 38d27fd1c5faabedefa5507dfd83cb4c952fbc8c SHA1 52b92682cf41e53e71bf432537a16215bd9546b1 SHA256 851bf218a4283a1d8ea6ef98af0119a40eaa78bfaaec49c2f3440437f52889ba
