@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/swi-prolog
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.189 2009/08/02 00:27:52 keri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.190 2009/08/18 08:34:46 keri Exp $
+
+*swi-prolog-5.7.14 (18 Aug 2009)
+
+  18 Aug 2009; <keri@gentoo.org> +swi-prolog-5.7.14.ebuild:
+  Bump -5.7 development version
 
 *swi-prolog-5.7.13 (02 Aug 2009)
 
